test-cases/valid/reject/subtract_bad_operand_type.ul
void main() {
    print "ABC" - "AB"; // String subtraction not supported
}
